# cryoet_agent

./: .gitignore  CHANGELOG.md  README.md  RESEARCH_IDEA.md  RESEARCH_PLAN.md  pyproject.toml  requirements.txt
asset/: skillLoader.py
cryoet_agent/: cli.py  main.py
cryoet_agent/prompts/: PROMPT.py  __init__.py  workflow_schema.json
cryoet_agent/skill_loader/: __init__.py  skillLoader.py
cryoet_agent/skills/coordinate_system/: SKILL.md
cryoet_agent/skills/coordinate_system/reference/: aretomo_coordinate_system.md  imod_coordinate_system.md  relion_coordinate_system.md  software_coordinate_patterns.md  warp_coordinate_system.md
cryoet_agent/skills/coordinate_system/scripts/: __init__.py  convert_tomogram.py  detect_coordinate_system.py  validate_coordinate_system.py
cryoet_agent/skills/motion_correction/: SKILL.md
cryoet_agent/skills/motion_correction/reference/: motioncor_motion_correction.md  warp_motion_correction.md
cryoet_agent/skills/pdf_parser/: xxx.md
cryoet_agent/skills/pdf_parser/reference/: pdfminer_extract.py
cryoet_agent/skills/tool_check/: SKILL.md
cryoet_agent/skills/tool_check/scripts/: __init__.py  check_tools.py
cryoet_agent/tools/: TOOLS.py  __init__.py  dataset_quality.py  pdf_parser.py  read_file.py  run_subagent.py  safe_path.py  shell.py  todo_list.py
src/: main.py
src/cryoet_agent/: __init__.py  __main__.py  app.py  cli.py  config.py
src/cryoet_agent/agent/: local_model.py  planner.py  prompts.py  schemas.py
src/cryoet_agent/introspection/: scanner.py
src/cryoet_agent/planning/: renderer.py
src/cryoet_agent/skills/: loader.py
src/prompts/: PROMPT.py
src/tools/: TOOLS.py  __init__.py  run_bash.py  shell.py  shell_llm_adapter.py  shell_tool_schema.json
tests/: test_cli.py  test_planner.py  test_scanner.py  test_skills.py
(+11 files in other folders)
