[project]
name = "cryoet-agent"
version = "0.1.0"
description = "A data-centric planning assistant for cryo-ET workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "click==8.3.2",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.13.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "mrcfile==1.5.4",
    "numpy==2.4.4",
    "openai==2.30.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "python-dotenv==1.2.2",
    "rich==14.3.3",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "pypdf>=5.0.0",
    "pdfminer.six>=20231228",
]

[project.scripts]
cryoet_agent = "cryoet_agent.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryoet_agent*"]
